# hello-python-ai

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
bedrock/: README.md  main.py  pyproject.toml
examples/: bedrock.py  bedrock_example.py  chat_judge_example.py  chat_observability_example.py  direct_judge_example.py  gemini.py  gemini_example.py  judge_example.py  langchain.py  langchain_example.py  langgraph_agent_example.py  langgraph_multi_agent_example.py  openai.py  openai_example.py
examples/bedrock/: README.md  bedrock_example.py  pyproject.toml
examples/chat-observability/: README.md
examples/chat_observability/: README.md  chat_observability_example.py  pyproject.toml
examples/gemini/: README.md  gemini_example.py  pyproject.toml
examples/judge/: README.md  chat_judge_example.py  direct_judge_example.py  pyproject.toml
examples/langchain/: README.md  langchain_example.py  pyproject.toml
examples/langgraph-agent/: langgraph_agent_example.py
examples/langgraph_agent/: README.md  langgraph_agent_example.py  pyproject.toml
examples/langgraph_multi_agent/: README.md  langgraph_multi_agent_example.py  pyproject.toml
examples/managed_agent/: README.md  managed_agent_example.py  pyproject.toml
examples/managed_agent_graph/: README.md  managed_agent_graph_example.py  pyproject.toml
examples/openai/: README.md  openai_example.py  pyproject.toml
features/create_agent/: .env.example  README.md  create_agent_example.py  managed_agent_example.py  pyproject.toml
features/create_agent_graph/: .env.example  README.md  create_agent_graph_example.py  managed_agent_graph_example.py  pyproject.toml
features/create_judge/: .env.example  README.md  create_judge_example.py  pyproject.toml
features/create_model/: .env.example  README.md  create_model_example.py  managed_model_example.py  pyproject.toml
features/judge/: README.md  judge_example.py
features/managed_agent/: managed_agent_example.py  pyproject.toml
features/managed_agent_graph/: managed_agent_graph_example.py  pyproject.toml
features/managed_model/: README.md  managed_model_example.py  pyproject.toml
getting_started/agent_config/langgraph_agent/: langgraph_agent_example.py  pyproject.toml
getting_started/agent_config/langgraph_multi_agent/: langgraph_multi_agent_example.py
getting_started/bedrock/converse/: .env.example  README.md  bedrock_example.py  pyproject.toml
getting_started/completion_config/bedrock/: bedrock_example.py  pyproject.toml
getting_started/completion_config/gemini/: gemini_example.py
getting_started/completion_config/langchain/: langchain_example.py  pyproject.toml
getting_started/completion_config/openai/: openai_example.py  pyproject.toml
getting_started/gemini/generate_content/: .env.example  README.md  gemini_example.py  pyproject.toml
getting_started/langchain/invoke/: .env.example  README.md  langchain_example.py  pyproject.toml
getting_started/langgraph/react_agent/: .env.example  README.md  langgraph_agent_example.py  pyproject.toml
getting_started/langgraph/state_graph/: .env.example  README.md  langgraph_multi_agent_example.py  pyproject.toml
getting_started/openai/chat_completions/: README.md  openai_example.py  pyproject.toml
openai/: README.md  main.py  pyproject.toml
