[tool.poetry]
name = "hello-python-ai"
version = "0.1.0"
description = "Hello LaunchDarkly for Python AI - OpenAI"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [ { include = "examples" } ]

[tool.poetry.scripts]
bedrock-example = 'examples.bedrock_example:main'
openai-example = 'examples.openai_example:main'
gemini-example = 'examples.gemini_example:main'
langchain-example = 'examples.langchain_example:main'
langgraph-agent-example = 'examples.langgraph_agent_example:main'
langgraph-multi-agent-example = 'examples.langgraph_multi_agent_example:main'
judge-example = 'examples.judge_example:main'

[tool.poetry.dependencies]
python = "^3.9"
launchdarkly-server-sdk-ai = { git = "https://github.com/launchdarkly/python-server-sdk-ai.git", branch = "jb/temp-judge" }

boto3 = { version = ">=0.2.0", optional = true }
openai = { version = ">=0.2.0", optional = true }
google-genai = { version = "^1.30.0", optional = true }
langchain = {version = "^0.3.0", optional = true}
langchain-aws = {version = "^0.2.30", optional = true}
langchain-google-genai = {version = "^2.1.9", optional = true}
langchain-openai = {version = "^0.3.30", optional = true}
langgraph = {version = "^0.2.0", optional = true}

[tool.poetry.extras]
bedrock = ["boto3"]
openai = ["openai"]
gemini = ["google-genai"]
langchain = ["langchain", "langchain-openai", "langchain-google-genai", "langchain-aws"]
langgraph = ["langgraph", "typing-extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
