[tool.poetry]
name = "hello-python-ai"
version = "0.1.0"
description = "Hello LaunchDarkly for Python AI"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

# Each example is self-contained with its own pyproject.toml.
# To run an example, cd into its directory under examples/ and run:
#   poetry install && poetry run <example-name>
# See each example's README for details.

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
