[tool.poetry]
name = "main"
version = "0.1.0"
description = "Hello LaunchDarkly for Python AI - OpenAI"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
halo = ">=0.0.3"
openai = ">=0.2.0"
launchdarkly-server-sdk-ai = {git = "ssh://git@github.com/launchdarkly/python-server-sdk-ai", rev = "dob/fixData"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
