[tool.poetry]
name = "hello-python-ai-bedrock"
version = "0.1.0"
description = "Hello LaunchDarkly for Python AI - Bedrock"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "bedrock_example.py"}]

[tool.poetry.scripts]
bedrock-example = "bedrock_example:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=1.0.0"
launchdarkly-server-sdk-ai = "^0.17.0"
boto3 = ">=0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
