[tool.poetry]
name = "hello-python-ai-gemini"
version = "0.1.0"
description = "Hello LaunchDarkly for Python AI - Gemini"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gemini_example.py"}]

[tool.poetry.scripts]
gemini-example = "gemini_example:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=1.0.0"
launchdarkly-server-sdk-ai = "^0.17.0"
google-genai = "^1.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
