[tool.poetry]
name = "hello-python-ai-openai"
version = "0.1.0"
description = "Hello LaunchDarkly for Python AI - OpenAI"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "openai_example.py"}]

[tool.poetry.scripts]
openai-example = "openai_example:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=1.0.0"
launchdarkly-server-sdk-ai = "^0.17.0"
launchdarkly-server-sdk-ai-openai = "^0.3.0"
openai = ">=0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
